--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.17.0 # Downgraded to match charts_flutter
   charts_flutter: ^0.12.0
   cupertino_icons: ^1.0.8
+  flutter_launcher_icons: ^0.11.0
 
 
 dev_dependencies:
@@ -69,7 +70,17 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/app_icon.png"
 
+
+flutter_native_splash:
+  color: "#ffffff" # Background color
+  image: assets/icon/app_icon.png
+  android: true
+  ios: true
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
