--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fl_chart: ^0.66.1  # Replacing charts_flutter with fl_chart
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.11.0
+  http: ^1.1.0  # For AI API calls
 
 
 dev_dependencies:
