--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,9 @@ android {
     }
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            // this bottom command is used to build for uloading in the playstore
+            // signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             minifyEnabled true // Enables code shrinking
             shrinkResources true // Removes unused resources
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
