--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.11.0
   http: ^1.1.0  # For AI API calls
+  flutter_bluetooth_serial: ^0.4.0
+  typed_data: ^1.3.0  # Add this for Uint8List
 
 
 dev_dependencies:
