--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: attendance_app
-description: "A new Flutter project."
+description: 'A new Flutter project.'
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -37,14 +37,13 @@ dependencies:
   firebase_auth: ^4.19.1
   provider: ^6.1.1
   intl: ^0.18.0
-  fl_chart: ^0.66.1  # Replacing charts_flutter with fl_chart
+  fl_chart: ^0.66.1 # Replacing charts_flutter with fl_chart
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.11.0
-  http: ^1.1.0  # For AI API calls
+  http: ^1.1.0 # For AI API calls
   flutter_bluetooth_serial: ^0.4.0
-  typed_data: ^1.3.0  # Add this for Uint8List
+  typed_data: ^1.3.0 # Add this for Uint8List
   permission_handler: ^11.0.1
-
 
 dev_dependencies:
   flutter_test:
@@ -77,11 +76,10 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/app_icon.png"
-
+  image_path: 'assets/icon/app_icon.png'
 
 flutter_native_splash:
-  color: "#ffffff" # Background color
+  color: '#ffffff' # Background color
   image: assets/icon/app_icon.png
   android: true
   ios: true
